--- a/perl/dynamic-log4perl/log4perl.conf
+++ b/perl/dynamic-log4perl/log4perl.conf
@@ -1,6 +1,19 @@
-log4perl.rootLogger              = DEBUG, LOG1
+log4perl.rootLogger              = DEBUG, LOG1, Updatefile
+
+log_layout_pattern = %d{yyyy/MM/dd} %d{HH:mm:ss} %p %m%n
+
+#log4perl.filter.Updatefilter = Log::Log4perl::Filter::LevelMatch
+#log4perl.filter.Updatefilter.LevelToMatch = UPDATE
+#log4perl.filter.Updatefilter.AcceptOnMatch = true
+
 log4perl.appender.LOG1           = Log::Log4perl::Appender::Screen
 log4perl.appender.LOG1.layout    = Log::Log4perl::Layout::PatternLayout
 #log4perl.appender.LOG1.layout.ConversionPattern = %d %p %m %n
 log4perl.appender.LOG1.layout.ConversionPattern = %d{HH:mm:ss} %15F{1} [%5L] %4p - %m%n
 
+# Custom log file w/ dynamic file name and filter.
+log4perl.appender.Updatefile = Log::Log4perl::Appender::File
+log4perl.appender.Updatefile.filename = sub { return getLogFilename('UPDATE'); }
+#log4perl.appender.Updatefile.Filter = Updatefilter 
+log4perl.appender.Updatefile.layout = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.Updatefile.layout.ConversionPattern = ${log_layout_pattern}
